[lworld] Fix profiling at array store subtype checks in Valhalla

XMLWordPrintable

      Merging in JDK-8308869 results in:

      One or more @IR rules failed:

      Failed IR Rules (1) of Methods (1)
      ----------------------------------
      1) Method "public static void compiler.c2.irTests.ProfileAtTypeCheck.test15(java.lang.Object)" - [Failed IR rules: 1]:
         * @IR rule 2: "@compiler.lib.ir_framework.IR(applyIfCPUFeatureAnd={}, phase={MACRO_EXPANSION}, applyIf={}, applyIfCPUFeatureOr={}, applyIfCPUFeature={}, counts={"_#CMP_P#_", "5", "_#LOAD_KLASS_OR_NKLASS#_", "2", "_#PARTIAL_SUBTYPE_CHECK#_", "1"}, failOn={}, applyIfAnd={}, applyIfOr={}, applyIfNot={})"
           > Phase "Macro expand":
             - counts: Graph contains wrong number of nodes:
               * Constraint 1: "(\\d+(\\s){2}(CmpP.*)+(\\s){2}===.*)"
                 - Failed comparison: [found] 3 = 5 [given]
                   - Matched nodes (3):
                     * 39 CmpP === _ 10 38 [[ 40 ]] !jvms: ProfileAtTypeCheck::test15 @ bci:5 (line 399)
                     * 120 CmpP === _ 119 38 [[ 121 ]]
                     * 126 CmpP === _ 100 35 [[ 128 ]] !orig=[103]

      Problem listed

            Assignee:
            Roland Westrelin
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: