8320296: [lworld] Fix profiling at array store subtype checks in Valhalla

Reviewed-by: thartmann